--- a/package.json
+++ b/package.json
@@ -1,37 +1,37 @@
 {
-  "name": "hardhat-project",
-  "devDependencies": {
-    "@ethersproject/abi": "^5.6.4",
-    "@ethersproject/providers": "^5.6.8",
-    "@nomicfoundation/hardhat-chai-matchers": "^1.0.2",
-    "@nomicfoundation/hardhat-network-helpers": "^1.0.3",
-    "@nomicfoundation/hardhat-toolbox": "^1.0.2",
-    "@nomiclabs/hardhat-ethers": "^2.1.0",
-    "@nomiclabs/hardhat-etherscan": "^3.1.0",
-    "@openzeppelin/hardhat-upgrades": "^1.19.1",
-    "@typechain/ethers-v5": "^10.1.0",
-    "@typechain/hardhat": "^6.1.2",
-    "@types/chai": "^4.3.1",
-    "@types/mocha": "^9.1.1",
-    "@types/node": "^18.6.2",
-    "chai": "^4.3.6",
-    "ethers": "^5.6.9",
-    "hardhat": "^2.10.1",
-    "hardhat-gas-reporter": "^1.0.8",
-    "solidity-coverage": "^0.7.21",
-    "ts-node": "^10.9.1",
-    "typechain": "^8.1.0",
-    "typescript": "^4.7.4"
-  },
+  "name": "q-dao",
   "dependencies": {
-    "@nomiclabs/hardhat-solhint": "^2.0.1",
-    "@nomiclabs/hardhat-waffle": "^2.0.3",
-    "@openzeppelin/contracts": "^4.7.2",
-    "dotenv": "^16.0.1",
-    "prettier": "^2.7.1",
-    "prettier-plugin-solidity": "^1.0.0-dev.23",
-    "solhint": "^3.3.7",
-    "solhint-plugin-prettier": "0.0.5"
+    "@dlsl/dev-modules": "^2.5.1",
+    "@metamask/eth-sig-util": "^6.0.0",
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@nomiclabs/hardhat-truffle5": "",
+    "@nomiclabs/hardhat-waffle": "^2.0.6",
+    "@nomiclabs/hardhat-web3": "^2.0.0",
+    "@openzeppelin/contracts": "^4.9.2",
+    "@openzeppelin/contracts-upgradeable": "^4.9.2",
+    "@openzeppelin/hardhat-upgrades": "^2.0.1",
+    "@openzeppelin/merkle-tree": "^1.0.5",
+    "@openzeppelin/test-helpers": "^0.5.16",
+    "@q-dev/gdk-contracts": "^1.1.1",
+    "@q-dev/gdk-sdk": "^0.12.11",
+    "@typechain/truffle-v5": "^8.0.5",
+    "bignumber.js": "^9.1.1",
+    "chai": "^4.3.7",
+    "chai-as-promised": "^7.1.1",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.3.1",
+    "ethers": "^6.6.4",
+    "hardhat-ethers": "^1.0.1",
+    "hardhat-truffle5": "^1.0.1",
+    "keccak256": "^1.0.6",
+    "merkle-tools": "^1.4.1",
+    "merkletreejs": "^0.3.10",
+    "truffle": "^5.11.0",
+    "web3": "^4.0.3"
+  },
+  "devDependencies": {
+    "@dlsl/hardhat-migrate": "^1.5.5",
+    "hardhat": "^2.17.1"
   },
   "scripts": {
     "clean": "npx hardhat clean",
