Update env variables required

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
-MNEMONIC=
-RPC_NODE_API_KEY=
 PRIVATE_KEY=
-ETHERSCAN_API_KEY=
+QRC20_TOKEN="0x3D38B1337171536b37E912fA3c80f39C94cFeB6C"
+DAO_REGISTRY_ADDRESS="0x1010f51317F3C9a62fa256d8616fE404E35cB3F4"
+MODULE_IMPLEMENTATION="0xFD5Bcb16B172A6990fCFA226aD98FE9fA3c4f089"
+MAIN_DAO_VOTING_ADDRESS="0xB3a483b906400Fa5BFD78629AaD35CC8fd06216a"
+VOTING_CONTRACT_ADDRESS="0xB3a483b906400Fa5BFD78629AaD35CC8fd06216a"
+MODULE_NAME="AirDropV2"
+DAO_REGISTRY_NAME="DAO_REGISTRY"
+TEN_PERCENTAGE="100000000000000000000000000"
